--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,6 @@
 @import url(https://fonts.googleapis.com/css?family=Cabin:regular,500,600,700,italic,500italic,600italic,700italic);
 
 body {
-    background: #131417;
+    background-color: #131417;
     font-family: "Cabin", sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
